--- a/services.html
+++ b/services.html
@@ -39,13 +39,11 @@
 			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
 			<input type="checkbox" id="drop">
 			<ul class="menu ml-auto mt-1">
-				<li class=""><a href="file:///C:/Users/23994/Desktop/cpts_1965_dau/index.html">主页</a></li>
-				<li class=""><a href="file:///C:/Users/23994/Desktop/cpts_1965_dau/about.html">剧情概要</a></li>
-				<li class="active"><a href="file:///C:/Users/23994/Desktop/cpts_1965_dau/services.html">人物介绍</a></li>
-				<li class=""><a href="file:///C:/Users/23994/Desktop/cpts_1965_dau/blog.html">图片欣赏</a></li>
-				<li class=""><a href="file:///C:/Users/23994/Desktop/cpts_1965_dau/contact.html">总评</a></li>
-				<li class="last-grid"><a href="file:///C:/Users/23994/Desktop/cpts_1965_dau/contact.html#">计算机  18  王帅帅    08183025</a></li>
-			</ul>
+				<li class=""><a href="index.html">主页</a></li>
+				<li class=""><a href="about.html">剧情概要</a></li>
+				<li class="active"><a href="services.html">人物介绍</a></li>
+				<li class=""><a href="blog.html">图片欣赏</a></li>
+				<li class=""><a href="contact.html">总评</a></li>			</ul>
 		</nav>
 		<!-- //nav -->
 	</div>
