--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
 			<input type="checkbox" id="drop">
 			<ul class="menu ml-auto mt-1">
-				<li class="active"><a href="index.html">主页</a></li>
+				<li class=""><a href="index.html">主页</a></li>
 				<li class=""><a href="about.html">剧情概要</a></li>
 				<li class=""><a href="services.html">人物介绍</a></li>
 				<li class=""><a href="blog.html">图片欣赏</a></li>
